final files and updates

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>local() with @font-face</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>local() with @font-face</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" media="screen">
 </head>
 
 <body>
-    <h1>Hello! Which Font Family Am I?</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate modi odit culpa hic deserunt dignissimos
-        consectetur. Assumenda expedita temporibus officia et alias laboriosam id explicabo officiis laudantium,
-        voluptatibus odit nulla.</p>
+  <h1>Hello! Which Font Family Am I?</h1>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate modi odit culpa hic deserunt dignissimos
+    consectetur. Assumenda expedita temporibus officia et alias laboriosam id explicabo officiis laudantium,
+    voluptatibus odit nulla.</p>
 </body>
 
 </html>
